# 48434-Embedded-Software

./: README.md
Final Project/: .Project.g_x  .cproject  CMakeLists.txt  Exp Uart.txt  ~$b2 notes.docx
Final Project/.metadata/.plugins/org.eclipse.rse.core/profiles/PRF.lab1111403013_7168/: node.properties
Final Project/.metadata/.plugins/org.eclipse.rse.core/profiles/PRF.lab1111403013_7168/FP.local.files_0/: node.properties
Final Project/Debug/: Project.elf  Project.map  _gitignore  makefile  objects.mk
Final Project/Debug/.metadata/.plugins/org.eclipse.cdt.make.core/: subdir.mk
Final Project/Documentation/: Project_SIGNALS.txt
Final Project/Documentation/doxygen/html/: _cpu_8h_source.html  _events_8h.html  _f_i_f_o_8c.html  _f_i_f_o_8h.html  _f_t_m_8c.html  _f_t_m_8h.html  _f_t_m_8h_source.html  _l_e_ds_8c.js  _p_e___const_8h_source.html  _p_e___error_8h_source.html  _p_e___l_d_d_8h.html  _p_e___types_8h.html  _p_i_t_8c.html  _p_i_t_8h.html  _r_t_c_8c.html  _r_t_c_8h.html  _s_p_i_8c.html  _s_p_i_8c.js  _s_p_i_8h_source.html  _u_a_r_t_8h.html  _u_a_r_t_8h.js  _u_a_r_t_8h_source.html  analog_8h.js  annotated.html  classes.html  dir_08d237fc27d4ecd563f71c5d52f2fecc.html  dir_c0ff5681a137e2c2e20d2725833255a5.html  functions_b.html  functions_c.html  functions_d.html  functions_f.html  functions_g.html  functions_h.html  functions_i.html  functions_l.html  functions_m.html  functions_n.html  functions_p.html  functions_q.html  functions_s.html  (+172 more)
Final Project/Generated_Code/: Vectors.c
Final Project/Project_Settings/Linker_Files/: ProcessorExpert.ld
Final Project/Sources/: DEM.c  DEM.h  FIFO.c  HMI.c  HMI.h  LEDs.c  PIT.c  PIT.h  UART.c  main.c  packet.c  priority.h
Lab 1/: .Project.g_c  .Project.g_x  ProcessorExpert.pe  ProjectInfo.xml
Lab 2/: Lab2 notes.docx  (+4 more)
(+1593 files in other folders)
